// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ItemForm correctly 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <input
        autoFocus={true}
        className="form-control"
        onChange={[Function]}
        placeholder="Description"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <input
        className="form-control"
        onChange={[Function]}
        placeholder="Amount"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <textarea
        className="form-control"
        onChange={[Function]}
        placeholder="Add a note for your item (optional)"
        value=""
      />
    </div>
    <button
      className="btn btn-lg btn-primary"
      type="submit"
    >
      Submit Item
    </button>
  </form>
</div>
`;

exports[`should render ItemForm correctly with item data 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <input
        autoFocus={true}
        className="form-control"
        onChange={[Function]}
        placeholder="Description"
        type="text"
        value="Shirt"
      />
    </div>
    <div
      className="form-group"
    >
      <input
        className="form-control"
        onChange={[Function]}
        placeholder="Amount"
        type="text"
        value="10"
      />
    </div>
    <div
      className="form-group"
    >
      <textarea
        className="form-control"
        onChange={[Function]}
        placeholder="Add a note for your item (optional)"
        value=""
      />
    </div>
    <button
      className="btn btn-lg btn-primary"
      type="submit"
    >
      Submit Item
    </button>
  </form>
</div>
`;

exports[`should render error for invalid form submission 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <input
        autoFocus={true}
        className="form-control"
        onChange={[Function]}
        placeholder="Description"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <input
        className="form-control"
        onChange={[Function]}
        placeholder="Amount"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <textarea
        className="form-control"
        onChange={[Function]}
        placeholder="Add a note for your item (optional)"
        value=""
      />
    </div>
    <button
      className="btn btn-lg btn-primary"
      type="submit"
    >
      Submit Item
    </button>
  </form>
</div>
`;

exports[`should render error for invalid form submission 2`] = `
<div>
  <div
    className="alert alert-warning alert-dismissible fade show"
    role="alert"
  >
    Please provide and item and amount.
  </div>
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <input
        autoFocus={true}
        className="form-control"
        onChange={[Function]}
        placeholder="Description"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <input
        className="form-control"
        onChange={[Function]}
        placeholder="Amount"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <textarea
        className="form-control"
        onChange={[Function]}
        placeholder="Add a note for your item (optional)"
        value=""
      />
    </div>
    <button
      className="btn btn-lg btn-primary"
      type="submit"
    >
      Submit Item
    </button>
  </form>
</div>
`;
